<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|start"
    android:orientation="vertical"
    tools:context="com.fragments.bmi_result">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:gravity="top|start"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingTop="2dp"
        android:paddingRight="30dp"
        android:paddingBottom="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="30dp"
            android:paddingBottom="10dp">

            <TextView
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="TMI = "
                android:textColor="@color/black"
                android:textSize="35dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bmiValueTV"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="25.5"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/bmiFlagImgView"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/correct" />

            <TextView
                android:id="@+id/bmiLabelTV"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:lineSpacingExtra="3dp"
                android:text="@string/normal_weight"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/commentTV"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:lineSpacingExtra="5dp"
                android:text="@string/advices"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center|left"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/advice1IMG"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/active" />

                <TextView
                    android:id="@+id/advice1TV"
                    style="@style/TextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/under_first"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="left|center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/advice2IMG"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/salad" />

                <TextView
                    android:id="@+id/advice2TV"
                    style="@style/TextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:lineSpacingExtra="3dp"
                    android:text="@string/under_second"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="left|center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/advice3IMG"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/sleep" />

                <TextView
                    android:id="@+id/advice3TV"
                    style="@style/TextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/under_third"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>